# Atlas

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Licence.md  ReadMe.md
Atlas/: CMakeLists.txt
Atlas/Editor/: App.axaml  App.axaml.cs  Atlas-Editor.csproj  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
Atlas/Framework/: CMakeLists.txt
Atlas/Framework/inc/: Atlas.h
Atlas/Framework/src/: main.cpp
Atlas/Interface/: CMakeLists.txt
Atlas/Interface/inc/: framework.h
Atlas/Interface/src/: APIMain.cpp
Docs/: DOXYFILE
Examples/: CMakeLists.txt
Examples/00-Hello-World/: CMakeLists.txt  main.cpp
